# vega-framework

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ASYNC_LISTENERS_RELEASE_NOTES.md  CHANGELOG.md  CLAUDE.md  CORRECTIONS_NEEDED.md  DOCUMENTATION.md  EVENT_BUS_SUMMARY.md  EXTRACTION_GUIDE.md  Makefile  README.md  coverage.xml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yaml
docs/: ASYNC_LISTENERS.md  FEATURES.md  LISTENER_QUICK_REFERENCE.md  README.md  philosophy.md
docs/cli/: generate.md  overview.md
docs/events/: overview.md  publishing.md
docs/explanation/: philosophy.md  project-structure.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: building-domain-layer.md
docs/how-to/: build-domain-layer.md  install.md  use-vega-web.md
docs/patterns/: service.md
docs/reference/: ROADMAP.md
docs/tutorials/: quickstart.md
examples/events/: auto_publish_example.py  basic_example.py  class_based_handlers.py  middleware_example.py  simple_syntax_example.py  test_default_auto_publish.py
tests/: .gitignore  LISTENER_TESTS.md  QUICK_START.md  README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/functional/: __init__.py  test_listener_workflows.py  test_web_endpoints.py  test_web_middleware.py
tests/integration/: __init__.py  (+2 more)
tmp/test-router-project/: .env.example  ARCHITECTURE.md  README.md  config.py  main.py  pyproject.toml  settings.py
tmp/test-router-project/presentation/web/: app.py  main.py
tmp/test-router-project/presentation/web/routes/: __init__.py  order.py  product.py
(+78 files in other folders)
