[tool.poetry]
name = "test-router-project"
version = "0.1.0"
description = "Vega Framework application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
vega-framework = "^0.1.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
click = "^8.1.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
email-validator = "^2.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
